python/testData/quickFixes/PyAddImportQuickFixTest/beforeStatementAboveBoundCommentsBelowFileCommentBlock/main.py
# comment 1

# comment 2

pass

<error descr="Unresolved reference 'a'"><caret>a</error>